<resources>
    <string name="app_name">WanAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="wx_article">公众号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="re_password">重复密码</string>
    <string name="register">注册</string>
    <string name="collection">收藏</string>
    <string name="login_out">登出</string>

    <string name="camera">相机</string>
    <string name="location_and_contacts">定位和读取联系人</string>
    <string name="sms">短信</string>
</resources>
