<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/select_home"
        android:title="@string/home" />
    <item
        android:id="@+id/fragment_system"
        android:icon="@drawable/ic_system"
        android:title="@string/system" />
    <item
        android:id="@+id/fragment_navigation"
        android:icon="@drawable/ic_navigation"
        android:title="@string/navigation" />
    <item
        android:id="@+id/fragment_project"
        android:icon="@drawable/ic_project"
        android:title="@string/project" />
    <item
        android:id="@+id/fragment_wx_article"
        android:icon="@drawable/ic_wx"
        android:title="@string/wx_article" />
</menu>
